--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-== Photo Data Tool
+== Shaprgram
 
 We love open data, because it lets you do neat things. The problem with open data is how much effort is required to make it useful.
 
