--- a/README.rdoc
+++ b/README.rdoc
@@ -18,7 +18,7 @@ Just spent a few hard earned rate payer dollars on nice new benches? Use this to
 ==== Much more
 
 * Parking spaces & restricted parking - all parking inspectors carry cameras, making it trivial to document your city
-* Signs - need to capture the signed speed limits across multiple authorities? Use this tool to complete your dataset (@@link to geelong city council efforts)
+* Signs - need to capture the signed speed limits across multiple authorities? Use this tool to complete your dataset.
 * Tree health - Let members of your community tell you when a tree is ill, growing too much or more - find out *before* it becomes a costly issue to rectify.
 
 === Get started
